--- a/client/src/components/topbar/topbar.css
+++ b/client/src/components/topbar/topbar.css
@@ -16,9 +16,10 @@
 .Logo {
     font-size: 24px;
     margin-left: 20px;
-    font-weight: bold;
+    font-weight: bolder;
     color: black;
     cursor: pointer;
+    font-family: 'Dancing Script', cursive;
 }
 
 .topbarCenter {
