--- a/client/src/components/rightbar/rightbar.css
+++ b/client/src/components/rightbar/rightbar.css
@@ -1,13 +1,12 @@
 .rightbar {
     flex: 4;
-    overflow-y: scroll;
     position: sticky;
     top: 50px;
     height: calc(100vh - 50px);
 }
 
 .rightbarWrapper {
-    padding: 20px 20px 0 0;
+    padding: 20px 20px 0 10px;
 
 }
 
@@ -34,10 +33,6 @@
     margin: 30px 0;
 }
 
-.rightbarTitle{
-    margin-bottom: 20px;
-}
-
 .rightbarFriendList {
     padding: 0;
     margin: 0;
@@ -52,5 +47,53 @@
 
 .rightbarTitle{
     color: wheat;
+    font-size: 18px;
+    font-weight: bolder;
+    margin-bottom: 20px;
 }
 
+
+.rightbarInfo{
+    margin-bottom: 30px;
+}
+
+.rightbarInfoItem{
+    margin-bottom: 10px;
+}
+
+.rightbarInfoKey{
+    font-weight: 500;
+    color: rgb(240, 223, 191);
+    margin-right: 15px;
+}
+
+.rightbarInfoValue{
+    color: wheat;
+    font-weight: 300;
+
+}
+
+.rightbarFollowings{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.rightbarFollowing{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    cursor: pointer;
+    align-items: center;
+}
+
+.rightbarFollowingName{
+    color: wheat;
+
+}
+.rightbarFollowingImg{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 5px;
+}
