--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -1,6 +1,6 @@
 .share {
     width: 100%;
-    height: 170px;
+    height: auto;
     border-radius: 10px;
     -webkit-box-shadow: 4px 2px 10px 4px #FFFFFF;
     box-shadow: 4px 2px 10px 4px #FFFFFF;
@@ -74,4 +74,21 @@
     font-weight: 500;
     margin-right: 20px;
     cursor: pointer;
+}
+.shareImgContanier{
+    padding: 0 20px 10px 20px;
+    position: relative;
+}
+
+.shareImg{
+    width: 100%;
+    object-fit: cover;
+}
+
+.shareCancle{
+    position: absolute;
+    top: 0;
+    right: 20px;
+    cursor: pointer;
+    opacity: 0.7;
 }
