--- a/client/src/components/friend/friend.css
+++ b/client/src/components/friend/friend.css
@@ -2,6 +2,10 @@
     display: flex;
     align-items: center;
     margin-bottom: 15px;
+    padding: 10px;
+}
+.sidebarFriend:hover{
+    background-color: rgb(31, 34, 34);
 }
 
 .sidebarFriendImg{
