--- a/client/src/components/topbar/topbar.css
+++ b/client/src/components/topbar/topbar.css
@@ -95,3 +95,21 @@
     object-fit: cover;
     cursor: pointer;
 }
+
+.topbarEnd {
+    display: flex;  
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.Logout{
+    cursor: pointer;
+    margin-right: 10px;   
+    background-color: rgb(0, 0, 0);
+    border: none;
+    border-radius: 5px;
+    width: 90px;
+    height: 30px;
+    align-items: center;
+    color: wheat;
+}
